# threador

./: README.md  pyproject.toml
examples/: example_raw_thread.txt  example_thread.txt
threador/: __init__.py  thread_utils.py
